updated formatting for collections page, some pageination formating

--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,12 @@ nav {
     text-align: center;
 }
 
+.pagenav {
+    background-color: rgba(28, 110, 140, 0);
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 /* Homepage styling*/
 .bg-image{
