--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,9 @@
               </div>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/friends/{{user.id}}">My Friends</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/log_out">Log Out</a>
             </li>
         </div>
