--- a/templates/allfriends.html
+++ b/templates/allfriends.html
@@ -2,8 +2,8 @@
 {% block title %}{{displayed_user.username}}'s Friends{% endblock %}
 
 {% block body %}
-<div class='bg-image-allfriends'></div>
-<div class="bodytextallfriends">
+<div class='bg-image-allfriends bg-image'></div>
+<div class="bodytext">
     <h1>{{displayed_user.username.title()}}'s Friends</h1>
     <br>
     
