--- a/templates/book.html
+++ b/templates/book.html
@@ -2,8 +2,8 @@
 {% block title %}Book details!{% endblock %}
 
 {% block body %}
-<div class='bg-image-bookdetails'></div>
-<div class="bookdetails">
+<div class='bg-image-bookdetails bg-image'></div>
+<div class="bodytext">
 
     <h1>{{book['title']}}</h1>
     <br>
