--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,8 +2,8 @@
 {% block title %}Welcome to My Reads!{% endblock %}
 
 {% block body %}
-<div class='bg-image'></div>
-<div class='homepage container'>
+<div class='bg-image bg-image-home'></div>
+<div class='bodytext container'>
   <h1>Welcome!</h1>
   <br>
 
