--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,8 @@
 {% block body %}
 
     <meta id='pages-java' data-count='{{pages}}'>
-    
+    <div class='bg-image-collection'></div>
+    <div class="collectiontxt container">
     Displaying results for "{{search_terms}}"
     {% for book in results %}
         <div>
@@ -67,5 +68,5 @@
         </div>
 
     {% endif %}
-
+    </div>
 {% endblock %}
