Updated styling on results page

--- a/templates/collection.html
+++ b/templates/collection.html
@@ -127,7 +127,7 @@
             </ul>
         </div>
     {% else %}
-        <div class='pagenav' aria-label='search_results'>
+        <div aria-label='search_results'>
         <ul class='pagination justify-content-center pagecolor'>
             {% if page != 1 %}
                 <li class='page-item'><a class='page-link' href="/collection?collection={{collection.id}}&page=1">1</a></li>
