--- a/static/style.css
+++ b/static/style.css
@@ -183,6 +183,16 @@ h6 {
 }
 /* results styling*/
 
+.bg-image-results {
+    background: url(/static/photos/books.jpg);
+    background-size: cover;
+}
+
+#jumppageresults {
+    margin-left: 50px;
+    width: 150px;
+}
+
 /* user_results styling*/
 
 /* user styling*/
