--- a/templates/search.html
+++ b/templates/search.html
@@ -2,16 +2,20 @@
 {% block title %}Search My Reads{% endblock %}
 
 {% block body %}
+<div class='bg-image-search bg-image'></div>
+<div class="bodytext container">
   <h1>Search</h1>
+  <br>
+  <br>
   <form action='/search_results'>
     <div>
       <label for='search_terms'></label>
-      <input type='text' name='search_terms' id='terms'> 
+      <input id='searchtxt' type='text' name='search_terms' id='terms' placeholder="Title, Author, Isbn or Username"> 
     </div>
+    <br>
     <label>
       <div id='type' class='form-group'>
-        Search by:
-        <select name='type' class='form-control'>
+        <select name='type' class='form-control btn-secondary btn-sm drpdown'>
           <option value='title'>Title</option>
           <option value='author'>Author</option>
           <option value='user'>User</option>
@@ -19,7 +23,7 @@
         </select>
       </div>
     </label>
-    <input type='submit' value="Search">
+    <input id='searchbutton' type='submit' value="Search" class='btn btn-secondary'>
   </form>
-
+</div>
 {% endblock %}
