Updated styling on user_results page

--- a/static/style.css
+++ b/static/style.css
@@ -209,6 +209,11 @@ h6 {
 }
 
 /* user_results styling*/
+.bg-image-userresults {
+    background: url(/static/photos/bookshelf2.jpg);
+    background-size: cover;
+}
+
 
 /* user styling*/
 
