--- a/templates/allfriends.html
+++ b/templates/allfriends.html
@@ -40,7 +40,7 @@
                 </div></div>
             {% else %}
                 <form action="/add_friend/{{friend.id}}">
-                    <input type='submit' value="Send a Friend Request" class="btn btn-secondary">
+                    <input type='submit' value="Send Friend Request" class="btn btn-secondary">
                 </form>
 
             {% endif %}
