--- a/static/style.css
+++ b/static/style.css
@@ -214,39 +214,51 @@ h6 {
     background-size: cover;
 }
 
-
 /* user styling*/
 
 .bg-pattern-user {
     background: url(/static/photos/bush/bush.png) repeat center;
-    background-size: auto, cover, 100%;
-
-    filter: blur(2px);
-    position: fixed;
-
-    min-width:100%; 
-    min-height:100%; 
-    width:auto; 
-    height:auto;
+    background: url(/static/photos/bookshelf1.jpg);
+    background-size: cover;
 }
 
-.bodytextuser {
-    background-color:rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+
+.usersect {
+    background-color: rgba(152, 113, 137, .3);
     color: white;
     font-weight: bold;
     border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -5%);
-    z-index: 1;
+
+    z-index: 6;
+    margin-right: auto;
+    margin-left: auto;
     width: 80%;
     text-align: center;
 }
 
+h2 {
+    margin-top: 30px ;
+}
 
+h5 {
+    color: rgb(176, 231, 252);
+}
 
+.bookrequest {
+    display: inline-block;
+    padding: 10px;
+}
 
+.bookimageuser {
+    
+    height: 150px;
+}
 
+.bknmuser {
+    width: 100%;
+    max-width: 250px;
+}
 
+.requeststatus {
+    justify-content: center;
+}
